<resources>
    <string name="app_name">SmartMouse</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_connect">Connect</string>
    <string name="drawer_mouse">Mouse</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="title_connect">Connect</string>
    <string name="title_home">Home</string>
    <string name="home_status_init">Initializing</string>
    <string name="home_button_init">Initializing</string>
    <string name="home_status_unsupported">Unsupported</string>
    <string name="home_button_unsupported">Return</string>
    <string name="home_unsupported_message">Your device does not seem to support the bluetooth HID profile that is required to run this app. <br /> Not all devices do support this profile. Sometimes, support for this profile may be added in a firmware update.</string>
    <string name="home_unsupported_playstore">Open in Play Store</string>
    <string name="home_status_disconnected">Disconnected</string>
    <string name="home_button_disconnected">To Connect</string>
    <string name="home_connected_message">Your are connected to:</string>
    <string name="home_status_connected">Connected</string>
    <string name="home_button_connected">To Mouse</string>
    <string name="home_connected_elapsed">%s elapsed</string>
    <string name="home_disabled_message">This app requires bluetooth to work properly, since connections to the target device are established via bluetooth.</string>
    <string name="home_disabled_recheck">Refresh</string>
    <string name="home_status_disabled">Disabled</string>
    <string name="home_button_disabled">Enable Bluetooth</string>
    <string name="connect_status_disconnected">Disconnected</string>
    <string name="connect_select_prompt">Select a device:</string>
    <string name="connect_select_add">Add a device</string>
    <string name="dialog_add_next">Next</string>
    <string name="dialog_add_cancel">Cancel</string>
    <string name="dialog_add_select_manual">Add Manually</string>
    <string name="dialog_add_select_unknown">Unknown</string>
    <string name="dialog_add_select_title">Select a device:</string>
    <string name="dialog_add_select_scanning">Scanning…</string>
    <string name="dialog_add_select_rescan">Rescan</string>
    <string name="dialog_add_select_initializing">Initializing</string>
    <string name="dialog_add_select_notice">Make sure your target device is discoverable in order to see it here. In some cases this must be enabled explicitly.</string>
    <string name="dialog_add_manual_name">Device Name</string>
    <string name="dialog_add_manual_mac">Device MAC Address</string>
    <string name="dialog_add_manual_name_error">Please enter a Name for your device.</string>
    <string name="dialog_add_manual_mac_error">Please enter a valid MAC address.</string>
    <string name="dialog_add_bonded_future">Your device is currently already paired to the target device. On some devices, this might lead to connection issues in the future.</string>
    <string name="dialog_add_bonded_instruction">So if you experience connection issues with this target device, try to remove the target device from this device AND this device from the target device in the respective bluetooth settings.</string>
    <string name="dialog_add_bonded_title">Unpair the target device.</string>
    <string name="dialog_add_bonded_error">Your device is still paired to the target device.</string>
    <string name="dialog_add_success_message">You have successfully added:</string>
    <string name="dialog_add_success_title">Success</string>
    <string name="dialog_add_success_positive">Done</string>
    <string name="dialog_add_already_message">You have already added this device.</string>
    <string name="dialog_add_already_helper">If you do not see your device under the added devices, it may be registered under an old name.</string>
    <string name="dialog_add_already_positive">Done</string>
    <string name="dialog_add_already_title">Already added</string>
    <string name="connect_select_item_unknown">Unknown</string>
    <string name="connect_select_item_last">Last used: %s</string>
    <string name="dialog_info_name">Name</string>
    <string name="dialog_info_address">MAC Address</string>
    <string name="dialog_info_last">Last used at</string>
    <string name="dialog_add_manual_instruction">Please enter the details of your target device:</string>
    <string name="dialog_info_positive">Done</string>
    <string name="dialog_info_delete">Remove device</string>
    <string name="dialog_info_title">Device Information</string>
    <string name="connect_select_item_last_format">dd.MM.yy</string>
    <string name="connect_select_item_never">Never</string>
    <string name="dialog_info_last_never">Not yet</string>
    <string name="dialog_info_last_format">dd.MM.yy</string>
    <string name="connect_connecting_status_establishing">Establishing connection…</string>
    <string name="connect_connected_mouse">To Mouse</string>
    <string name="connect_connected_disconnect">Disconnect</string>
    <string name="connect_connecting_elapsed">Time Elapsed:</string>
    <string name="connect_connected_name">Connected to:</string>
    <string name="connect_connected_elapsed">%s elapsed</string>
    <string name="connect_status_connecting">Connecting…</string>
    <string name="home_connected_more">More info</string>
    <string name="connect_failed_message">Failed to connect to:</string>
    <string name="connect_failed_precautions">Make sure that …</string>
    <string name="connect_failed_precautions_range">… the target device is in range.</string>
    <string name="connect_failed_precautions_bluetooth">… bluetooth is enabled on the target device.</string>
    <string name="connect_failed_precautions_support">… your host device supports HID devices and connections with the Android bluetooth HID profile.</string>
    <string name="connect_failed_fixes">Possible fixes to other problems may be to …</string>
    <string name="connect_failed_fixes_repair">… remove this device from your target device and the host from this device in the respective bluetooth settings.</string>
    <string name="connect_failed_fixes_trust">… trust this device on the target device so that this device can connect to it on its own.</string>
    <string name="connect_failed_back">Back</string>
    <string name="connect_failed_remove">Remove this device</string>
    <string name="title_settings">Settings</string>
    <string name="dialog_calibrate_happening_message">Please wait while the app is analyzing your sensors and calibrating its values. This process can take up to one minute.</string>
    <string name="dialog_calibrate_title">Calibrating Algorithm</string>
    <string name="app_version" translatable="false">1.3.0</string>
    <string name="about_title_version">Version:&#160;</string>
    <string name="about_title_date">Last Updated at:&#160;</string>
    <string name="app_date" translatable="false">21.09.21</string>
    <string name="about_copyright" translatable="false">© 2021</string>
    <string name="about_github">The source code for this app is available on <a href="https://github.com/VirtCode/SmartMouse">GitHub</a>.</string>
    <string name="drawer_debug">Debugger</string>
    <string name="sheet_debug_chart_axis_x">X Axis</string>
    <string name="sheet_debug_chart_axis_z">Z Axis</string>
    <string name="sheet_debug_chart_axis_y">Y Axis</string>
    <string name="sheet_debug_chart_axis_title">Current Axis</string>
    <string name="sheet_debug_chart_series_title">Visible Series</string>
    <string name="sheet_debug_chart_other_title">Other Settings</string>
    <string name="sheet_debug_chart_average_subtitle">Amount of samples for one datapoint</string>
    <string name="settings_interface_theme_title">Theme</string>
    <string name="settings_interface_theme_description">Sets the general look of the interface.</string>
    <string name="settings_interface_behaviour_scroll_description">How much swipe distance equals one scroll step.</string>
    <string name="settings_interface_behaviour_scroll_title">Scroll Step Size</string>
    <string name="settings_interface_behaviour_middle_description">Sets how long the middle button has to be pressed for a click in milliseconds.</string>
    <string name="settings_interface_behaviour_middle_title">Middle Click Delay</string>
    <string name="settings_interface_visuals_enable_title">Enable Visuals</string>
    <string name="settings_interface_visuals_stroke_description">Sets the weight of the button outline.</string>
    <string name="settings_interface_visuals_stroke_title">Stroke Weight</string>
    <string name="settings_interface_visuals_intensity_description">Sets the intensity of the visuals.</string>
    <string name="settings_interface_visuals_intensity_title">Intensity</string>
    <string name="settings_interface_vibrations_enable_title">Enable Vibrations</string>
    <string name="settings_interface_vibrations_button_intensity_description">Controls the vibration intensity of the buttons.</string>
    <string name="settings_interface_vibrations_button_intensity_title">Button Intensity</string>
    <string name="settings_interface_vibrations_button_length_description">Sets the length of the vibration of the button in milliseconds.</string>
    <string name="settings_interface_vibrations_button_length_title">Button Length</string>
    <string name="settings_interface_vibrations_wheel_intensity_description">Controls the vibration intensity of the scroll wheel.</string>
    <string name="settings_interface_vibrations_wheel_intensity_title">Scroll Intensity</string>
    <string name="settings_interface_vibrations_wheel_length_description">Sets the length of the vibration of one scroll wheel step in milliseconds.</string>
    <string name="settings_interface_vibrations_wheel_length_title">Scroll Length</string>
    <string name="settings_interface_vibrations_special_intensity_description">Controls the vibration intensity of secondary events, like the middle button.</string>
    <string name="settings_interface_vibrations_special_intensity_title">Secondary Intensity</string>
    <string name="settings_interface_vibrations_special_length_description">Sets the length of the vibration of a secondary event.</string>
    <string name="settings_interface_vibrations_special_length_title">Secondary Length</string>
    <string name="settings_interface_layout_height_description">Controls the Height of the Mouse Buttons.</string>
    <string name="settings_interface_layout_height_title">Height</string>
    <string name="settings_interface_layout_middle_description">Controls how wide the middle mouse button is.</string>
    <string name="settings_interface_layout_middle_title">Middle Button Width</string>
    <string name="settings_interface_behaviour">Behaviour</string>
    <string name="settings_interface_visuals">Visuals</string>
    <string name="settings_interface_vibrations">Vibrations</string>
    <string name="settings_interface_layout">Layout</string>
    <string name="settings_debug_server_host">SensorServer Hostname</string>
    <string name="settings_debug_enabled">Enable Debug Transmission</string>
    <string name="settings_debug_enable_description">Transmit sensor and processing data to a computer.</string>
    <string name="settings_debug_server_port">SensorServer Port</string>
    <string name="settings_debug_server_download_description">Open the GitHub page to download SensorServer</string>
    <string name="settings_debug_server_download">Download SensorServer</string>
    <string name="settings_debug_server">Server Configuration</string>
    <string name="settings_debug_server_description">Transmit data to a SensorServer</string>
    <string name="settings_debug_restart">For any of these settings to take effect, this app must be restarted.</string>
</resources>