<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheet_debug_chart_axis_title"/>

        <RadioGroup
            android:id="@+id/debug_chart_axis_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/debug_chart_axis_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sheet_debug_chart_axis_x"/>
            <RadioButton
                android:id="@+id/debug_chart_axis_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sheet_debug_chart_axis_y"/>
            <RadioButton
                android:id="@+id/debug_chart_axis_z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sheet_debug_chart_axis_z"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheet_debug_chart_series_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/debug_chart_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sheet_debug_chart_other_title"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sheet_debug_chart_average_subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sheet_debug_chart_average_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>