<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_bonded_future"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_bonded_instruction"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:id="@+id/add_bonded_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_bonded_error"
        android:visibility="gone"
        android:textColor="@color/design_default_color_error"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>